# strava-mcp

./: .pre-commit-config.yaml  PLAN.md  README.md  get_token.py  main.py  pyproject.toml  standalone_server.py  strava_token.txt
.github/workflows/: ci.yml
ai-docs/: strava-api-reference.md
specs/: poc.md
strava_mcp/: __init__.py  api.py  auth.py  config.py  main.py  models.py  oauth_server.py  server.py  service.py
tests/: __init__.py  test_api.py  test_auth.py  test_config.py  test_models.py  test_oauth_server.py  test_server.py  test_service.py
