[project]
name = "strava-mcp"
version = "0.5.0"
description = "Strava integration for MCP"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Yorrick Jansen"}
]
license = {text = "MIT"}
keywords = ["strava", "api", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ipykernel>=6.29.5",
    "pre-commit>=3.7.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.5.1",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.385",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strava_mcp"]

[project.scripts]
strava-mcp = "strava_mcp.main:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false
